# push-gateway-pruner

./: .gitignore  Dockerfile  Makefile  README.md  dummyfile  push_gateway_pruner.py  pyproject.toml
.github/workflows/: docker.yml  test.yml
tests/: test_push_gateway_pruner.py
