[tool.poetry]
name = "push-gateway-pruner"
version = "0.1.0"
description = "Prunes Prometheus push gateway for groupings older than a set interval"
authors = ["Vincent Tan <v.tan@mwam.com>"]

[tool.poetry.dependencies]
python = "3.7.4"
prometheus-client = "^0.13.1"
requests = "^2.27.1"
click = "^8.0.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"